# ZipCraft-Squeezer

./: .gitignore  main.cpp
include/: commandsHandler.h  compressorValidator.h  exceptions.h  fileCompressor.h  utils.h
mac_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: commandsHandler.cpp  compressorValidator.cpp  fileCompressor.cpp  main.cpp
